--- a/content/themes/froyo/assets/css/screen.css
+++ b/content/themes/froyo/assets/css/screen.css
@@ -101,10 +101,10 @@ table { border-collapse: collapse; border-spacing: 0; }
 @font-face {
     font-family: 'icons';
     src:url('../fonts/icons.eot');
-    src:url('../fonts/icons.eot?') format('embedded-opentype'),
+    src:url('../fonts/icons.eot?#iefix') format('embedded-opentype'),
         url('../fonts/icons.woff') format('woff'),
         url('../fonts/icons.ttf') format('truetype'),
-        url('../fonts/icons.svg') format('svg');
+        url('../fonts/icons.svg#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
