--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -67,6 +67,7 @@ body
   min-height: banner-height+10
   position: relative
   z-index: 2
+  margin-bottom: 140px
 
 if sidebar and sidebar isnt bottom
   #main
