--- a/themes/landscape/layout/_partial/article.ejs
+++ b/themes/landscape/layout/_partial/article.ejs
@@ -24,7 +24,7 @@
     </div>
     <footer class="article-footer">
       <a data-url="<%- post.permalink %>" data-id="<%= post._id %>" class="article-share-link">Share</a>
-      <% if (post.comments && config.disqus_shortname){ %>
+      <% if (post.comments && config.disqus_shortname && post.title != "About"){ %>
         <a href="<%- post.permalink %>#disqus_thread" class="article-comment-link">Comments</a>
       <% } %>
       <%- partial('post/tag') %>
