Update theme to remove header on sub pages

--- a/themes/landscape/layout/_partial/nav.ejs
+++ b/themes/landscape/layout/_partial/nav.ejs
@@ -1,4 +1,4 @@
-<div id="header-nav" >
+<div id="header-nav" class="">
     <div class="outer">
         <nav id="main-nav">
             <a id="main-nav-toggle" class="nav-icon"></a>
