--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -40,6 +40,7 @@
   z-index: 3;
   transition: 0.2s ease-out
   min-width: 170px
+  background-color: #333
   .mobile-nav-on &
     transform:translateX(mobile-nav-width);
     -ms-transform:translateX(mobile-nav-width); /* IE 9 */
