--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -54,6 +54,10 @@ body
 #container
   position: relative
 
+body.not-home
+    #container
+        padding-top: 62px;
+
 #wrap
   transition: 0.2s ease-out
   position relative
